[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Actors/boss.gd" type="Script" id=1]
[ext_resource path="res://images/raymondpixelartvillain.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 64 )

[node name="EnemyTest" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="balddemon" type="Sprite" parent="."]
position = Vector2( -4.76837e-07, 0 )
rotation = 4.71239
scale = Vector2( 0.31068, 0.305732 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
